Tue Jan 13 01:24:17 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (test_wr): Rdoc fix.  [ruby-core:02225]

Tue Jan 13 01:04:37 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_paths.rb (RI::Paths): First attempt at
	  incorporating DESTDIR in the rdoc installation.

Mon Jan 12 23:26:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): fix position after FCALL.  [ruby-dev:22574]

Mon Jan 12 18:00:11 2004  Ian Macdonald  <ian@caliban.org>

	* file.c (test_wr, test_ww): New functions implementing new
	  methods (File::world_readable?, File::world_writable?).

	* file.c (S_IRUGO, S_IGUGO): New macros.

Mon Jan 12 12:07:22 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::do_methods):
	  Someone changed the "// in eval.c" comments to "/*...*/" style,
	  so the parsing of the source file name broke.

	* object.c: Remove spurious space in TrueClass documentation.

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::find_body): Fix
	  bad regexp: if the code before a documented method contained
	  a comment that wasn't terminated by whitespace, that comment
	  and all intervening code was included in the following
	  method's documentation.

	* lib/rdoc/ri/ri_formatter.rb (RI::HtmlFormatter::break_to_newline):
	  HTML formats need explicit line breaks.

Mon Jan 12 02:24:07 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_formatter.rb (RI::HtmlFormatter): Add HTML
	  generation support to ri (Elliot Hughes)

Sun Jan 11 23:54:41 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* env.h (ruby_frame, ruby_scope, ruby_in_eval, ruby_class,
	  ruby_dyna_vars): export.  [ruby-dev:22566]

Sun Jan 11 02:35:53 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (make_hostent): a bug in brace position.

	* configure.in: install rdoc by default. if you do not want to
	  install rdoc, specify --disable-install-doc.

Sun Jan 11 02:07:47 2004  Dave Thomas  <dave@pragprog.com>
