@@ -53,7 +53,7 @@ module RI
     end
 
     # return the names of all classes and modules
-    def class_names
+    def full_class_names
       res = []
       find_classes_in(res, @cache.toplevel)
     end
@@ -61,7 +61,7 @@ module RI
     def find_classes_in(res, klass)
       classes = klass.classes_and_modules
       for c in classes
-        res << c.name
+        res << c.full_name
         find_classes_in(res, c)
       end
       res
